--- a/frontend/src/pages/LandingPage.css
+++ b/frontend/src/pages/LandingPage.css
@@ -27,7 +27,7 @@
     font-size: 1rem;
     text-transform: uppercase;
     cursor: pointer;
-    /* margin-right: 10px; */
+    margin-right: 10px;
   }
   
   .button:hover {
