--- a/frontend/src/pages/LoginUser.css
+++ b/frontend/src/pages/LoginUser.css
@@ -52,3 +52,10 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+.select-box {
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 8px;
+    width: 100%;
+    margin-bottom: 1rem;
+  }
